Fix 2nd exercise

--- a/qiskit/unit1/representing_qubit_states.ipynb
+++ b/qiskit/unit1/representing_qubit_states.ipynb
@@ -72,15 +72,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "solution: $|q⟩ = \\cos{\\frac{\\theta}{2}}|0⟩ + e^{i\\phi}\\sin{\\frac{\\theta}{2}}|1⟩ $ "
+    "General formula for representing qubit state using two variables $\\theta$, $\\phi$ \n",
+    "\n",
+    "$|q⟩ = \\cos{\\frac{\\theta}{2}}|0⟩ + e^{i\\phi}\\sin{\\frac{\\theta}{2}}|1⟩ $ "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Solutions: \n",
+    "1. $|0⟩: \\theta = 0, \\phi = 0 => |0⟩$\n",
+    "2. $|1⟩: \\theta = \\pi, \\phi = 0 => |1⟩$\n",
+    "3. $\\frac{1}{\\sqrt{2}}(|0⟩+|1⟩): \\theta = \\frac{\\pi}{2}, \\phi = 0$\n",
+    "4. $\\frac{1}{\\sqrt{2}}(|0⟩−i|1⟩): \\theta = \\frac{\\pi}{2}, \\phi = \\frac{3\\pi}{4}$ \n",
+    "5. $\\frac{1}{\\sqrt{2}}(i|0⟩+|1⟩): \\theta = \\frac{\\pi}{2}, \\phi = \\frac{\\pi}{2}$"
+   ]
   }
  ],
  "metadata": {
