Modify multi qubits entangled states exercise

--- a/qiskit/unit2/multi_qubits_entangled_states.ipynb
+++ b/qiskit/unit2/multi_qubits_entangled_states.ipynb
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
        "$\\displaystyle \n",
-       "\\text{Unitary = }\\begin{bmatrix}\n",
+       "\\text{U = }\\begin{bmatrix}\n",
        "0 & 0 & \\tfrac{1}{\\sqrt{2}} & \\tfrac{1}{\\sqrt{2}}  \\\\\n",
        "\\tfrac{1}{\\sqrt{2}} & -\\tfrac{1}{\\sqrt{2}} & 0 & 0  \\\\\n",
        "\\tfrac{1}{\\sqrt{2}} & \\tfrac{1}{\\sqrt{2}} & 0 & 0  \\\\\n",
@@ -244,14 +244,14 @@
    "source": [
     "backend = Aer.get_backend('unitary_simulator')\n",
     "unitary = execute(qc, backend).result().get_unitary()\n",
-    "array_to_latex(unitary, pretext=\"\\\\text{Unitary = }\")"
+    "array_to_latex(unitary, pretext=\"\\\\text{U = }\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\begin{bmatrix}1 \\\\ 0 \\\\ 0 \\\\ 0 \\end{bmatrix} U = 1 $"
+    "$ U \\begin{bmatrix}1 \\\\ 0 \\\\ 0 \\\\ 0 \\end{bmatrix}  = \\text{first row of U} = \\frac{1}{\\sqrt2}\\begin{bmatrix}0 \\\\ 1 \\\\ 1 \\\\ 0 \\end{bmatrix}$"
    ]
   }
  ],
